k8s/talos/apps/blog-stage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog-stage
  namespace: stage-blog
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway-private
      namespace: traefik
  hostnames:
    - blog-stage.local.bigd.no
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: blog-stage-compress
      backendRefs:
        - group: ""
          kind: Service
          name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
          weight: 1
